name:                steven-learns-monads
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stevenxl/steven-learns-monads#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Leiva
maintainer:          leiva.steven@gmail.com
copyright:           Copyright: (c) 2017 Steven Leiva
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable steven-learns-monads
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
