name:                steven-learns-monads
version:             0.1.0.0
homepage:            https://github.com/stevenxl/steven-learns-monads#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Leiva
maintainer:          leiva.steven@gmail.com
copyright:           Copyright: (c) 2017 Steven Leiva
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Test-Suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base
    , hspec
  ghc-options:
      -Wall
      -Werror
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
  default-language: Haskell2010
  other-modules:
     StateSpec
